Add AI Gateway with request/response logging (#6)

--- a/frontend/test/SpecRunner.html
+++ b/frontend/test/SpecRunner.html
@@ -115,6 +115,10 @@
     <script type="module" src="spec/components/tabs.spec.js"></script>
     <script type="module" src="spec/components/template-card.spec.js"></script>
     <script type="module" src="spec/components/toast.spec.js"></script>
+    <script
+      type="module"
+      src="spec/components/ai-request-viewer.spec.js"
+    ></script>
   </head>
   <body></body>
 </html>
